# nireject-publication

./: .gitignore  .gitmodules  Dockerfile  README.md  etl_stage.py  experiments.py  main.py  pyproject.toml
assets/: README.md  __init__.py  install_assets.sh
config/: __init__.py  basis_profiles.py  config.yaml  load_profile.py
detection/: __init__.py  genertators.py
features/features/: features_parameters.m
simulation/: design_experiment.m  simulation_parameters.m
tests/: test_detection.py  test_nireject.py
utils/: __init__.py
utils/matlab/: round_even.m  save_json.m
